# idsc.dataverse

./: .gitignore  LICENSE  migrate.md  pyproject.toml  readme.md  setup.cfg
idsc/dataverse/: api.py  utils.py
