[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idsc"
version = "0.0.1"
authors = [
  { name="Nikos Askitas", email="askitas@iza.org" },
]
description = "IDSC Python Code for the Dataverse API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://idsc.iza.org"
